k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopapi
  namespace: shopapi
  labels:
    app: shopapi
spec:
  selector:
    app: shopapi
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
